# cursor-game-studios

./: .gitignore  01-phase-01-cursor-native-studio-foundation.md  02-phase-02-agent-skill-deepening.md  03-phase-03-advanced-orchestration-production-pipelines.md  04-phase-04-unreal-native-integration-procedural-mastery.md  AGENTS.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MANIFEST.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TASKLIST.md  pyproject.toml
.cursor/: statusline.sh
.cursor/docs/: CLAUDE-local-template.md  agent-roster.md  director-gates.md  directory-structure.md  hooks-reference.md  (+5 more)
docs/: advanced-orchestration.md  agent-skill-affinity-matrix.md  index.md  orchestration-patterns.md  studio-operating-doctrine.md
pipelines/: asset-pipeline.md  automated-testing-pipeline.md  build-deployment-pipeline.md  chaos-destruction-pipeline.md  ci-agent-review-pipeline.md  concept-to-gdd-pipeline.md  index.md  lumen-lighting-pipeline.md  multi-agent-level-pipeline.md  nanite-optimization-pipeline.md  pcg-asset-generation-pipeline.md  unreal-pcg-pipeline.md  vertical-slice-pipeline.md  world-partition-pipeline.md  world-partition-streaming-pipeline.md
scripts/: generate-cursor-game-studios.py  nightly-studio-audit.py  phase2-deepen.py  pipeline-runner.py  run-unittest.py  studio-health-check.py  studio-metrics.py  unreal-mcp-health.py
skills/: index.md
tests/: __init__.py  test_phase3_pipelines.py  test_port_integrity.py
unreal/: index.md  live-link-patterns.md  unreal-agent-capabilities.md  unreal-mcp-integration.md
(+225 files in other folders)
